[package]
name = "agents"
version = "0.1.0"
authors = ["Bradley Lyman <lyman.brad3211@gmail.com>"]
edition = "2018"
build = "build.rs"
crate-type = "bin"

[dependencies]
draw2d = { path = "./draw2d", version = "0.1.0" }
flexi_logger = "0.17.1"
anyhow = "1.0.38"
nalgebra = "0.25.0"
log = "0.4.13"

[dependencies.textwrap]
features = ["terminal_size"]
version = "0.13.2"

[dependencies.glfw]
version = "0.41.0"
features = [ "vulkan" ]
